fix: use embedded font for consistent table column widths across platforms
Refs: #766