@@ -1,5 +1,6 @@
 package ch.sbb.polarion.extension.pdf_exporter.util.adjuster;
 
+import com.polarion.core.util.logging.Logger;
 import lombok.experimental.UtilityClass;
 import org.jetbrains.annotations.NotNull;
 import org.jsoup.helper.W3CDom;
@@ -12,6 +13,7 @@ import org.xhtmlrenderer.simple.Graphics2DRenderer;
 
 import java.awt.*;
 import java.awt.image.BufferedImage;
+import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -22,6 +24,8 @@ import java.util.Set;
 
 @UtilityClass
 public class TableAnalyzer {
+    private static final Logger logger = Logger.getLogger(TableAnalyzer.class);
+
     private static final String TABLE = "table";
     private static final String TBODY = "tbody";
     private static final String TR = "tr";
@@ -30,6 +34,23 @@ public class TableAnalyzer {
 
     // Doesn't really matter, our concern here are widths
     private static final int PAGE_HEIGHT = 1000;
+    private static final String EMBEDDED_FONT_PATH = "/fonts/DejaVuSans.ttf";
+    private static final Font EMBEDDED_FONT = loadEmbeddedFont();
+
+    private static Font loadEmbeddedFont() {
+        try (InputStream fontStream = TableAnalyzer.class.getResourceAsStream(EMBEDDED_FONT_PATH)) {
+            if (fontStream != null) {
+                Font font = Font.createFont(Font.TRUETYPE_FONT, fontStream).deriveFont(Font.PLAIN, 12f);
+                GraphicsEnvironment.getLocalGraphicsEnvironment().registerFont(font);
+                logger.info("Loaded embedded font: " + font.getFontName());
+                return font;
+            }
+        } catch (Exception e) {
+            logger.warn("Failed to load embedded font from " + EMBEDDED_FONT_PATH + ": " + e.getMessage());
+        }
+        logger.info("Using fallback sans-serif font");
+        return new Font(Font.SANS_SERIF, Font.PLAIN, 12);
+    }
 
     public Map<Integer, Integer> getColumnWidths(@NotNull Element tableElement, int pageWidth) {
         Map<Integer, Integer> columnWidths = new HashMap<>();
@@ -43,6 +64,9 @@ public class TableAnalyzer {
 
     private Document toSelfDocument(@NotNull Element tableElement) {
         org.jsoup.nodes.Document tempDoc = org.jsoup.nodes.Document.createShell("");
+        // Inject CSS to force the embedded font for consistent column width calculation across platforms
+        String fontFamily = EMBEDDED_FONT.getFamily();
+        tempDoc.head().appendElement("style").text("* { font-family: '" + fontFamily + "', sans-serif !important; }");
         tempDoc.body().appendChild(tableElement.clone());
         return new W3CDom().fromJsoup(tempDoc);
     }
@@ -53,6 +77,9 @@ public class TableAnalyzer {
         BufferedImage image = new BufferedImage(pageWidth, PAGE_HEIGHT, BufferedImage.TYPE_BYTE_GRAY);
         Graphics2D g2d = image.createGraphics();
         try {
+            g2d.setFont(EMBEDDED_FONT);
+            logRenderingHints(g2d);
+
             Dimension dim = new Dimension(pageWidth, PAGE_HEIGHT);
             renderer.layout(g2d, dim);
             return renderer.getPanel().getRootBox();
@@ -61,6 +88,20 @@ public class TableAnalyzer {
             g2d.dispose();
             image.flush();
         }
+    }
+
+    private void logRenderingHints(@NotNull Graphics2D g2d) {
+        logger.info("TableAnalyzer environment info:");
+        logger.info("  Java: " + System.getProperty("java.version") + " (" + System.getProperty("java.vendor") + ")");
+        logger.info("  OS: " + System.getProperty("os.name") + " " + System.getProperty("os.version") + " (" + System.getProperty("os.arch") + ")");
+
+        Font font = g2d.getFont();
+        FontMetrics fm = g2d.getFontMetrics();
+        logger.info("  Font: " + font);
+        logger.info("  Font family: " + font.getFamily() + ", name: " + font.getFontName());
+        logger.info("  Font metrics - ascent: " + fm.getAscent() + ", descent: " + fm.getDescent() + ", height: " + fm.getHeight());
+        logger.info("  Font metrics - charWidth('W'): " + fm.charWidth('W') + ", charWidth('i'): " + fm.charWidth('i'));
+        logger.info("  Font metrics - stringWidth(\"test\"): " + fm.stringWidth("test"));
     }
 
     private void findTableAndAnalyze(Box box, Map<Integer, Integer> columnWidths) {
@@ -88,7 +129,7 @@ public class TableAnalyzer {
 
     private void gatherColumnWidths(@NotNull Box tableBox, @NotNull Map<Integer, Integer> columnWidths) {
         List<Box> tbody = findChildrenByTag(tableBox, TBODY);
-        List<Box> rows = findChildrenByTag(!tbody.isEmpty() ? tbody.get(0) : tableBox, TR);
+        List<Box> rows = findChildrenByTag(!tbody.isEmpty() ? tbody.getFirst() : tableBox, TR);
 
         // Analyze all rows to properly handle colspan
         for (Box row : rows) {
